<resources>
    <string name="app_name">Laurent\'s</string>
    <string name="motto">Trouvez ce que vous recherchez</string>
    <string name="account">J\'ai déjà un compte, pour se login</string>
    <string name="join">Rejoignez-nous</string>
    <string name="phone">Numero de tél.</string>
    <string name="password">Mot de passe</string>
    <string name="remember">Remember me</string>
    <string name="forget">Mot de passe oublié?</string>
    <string name="admin">Etes-vous administrateur?</string>
    <string name="creer">Créer compte</string>
    <string name="name">Nom d\'utilisateur</string>
    <string name="ajout">Ajouter nouveau produits</string>
    <string name="select">Cliquez sur l\'image pour charger une nouvelle photo</string>
    <string name="produit">Nom du produit</string>
    <string name="description">Description du produit</string>
    <string name="prix">Prix du produit</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="category">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>