<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProduct">

    <ImageView
        android:id="@+id/imageProduit"
        android:layout_width="224dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/imageProduit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productname"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/produit"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProduit"
        android:gravity="center_vertical|center_horizontal"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="222dp"
        android:layout_height="42dp"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProduit"
        app:layout_constraintVertical_bias="0.772"
        android:gravity="center_vertical|center_horizontal"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProduit"
        app:layout_constraintVertical_bias="0.446"
        android:gravity="center_vertical|center_horizontal"/>

    <Button
        android:id="@+id/validerProduit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ajout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="0.165" />
</androidx.constraintlayout.widget.ConstraintLayout>