<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login">

    <Button
        android:id="@+id/buttonlogin2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="305dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        app:srcCompat="@drawable/applogo" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17dp"
        android:gravity="center_horizontal|center_vertical"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="354dp"
        android:layout_height="64dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="397dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword">

        <com.rey.material.widget.CheckBox
            android:id="@+id/checkbox"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/remember"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:cbd_strokeColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="557dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.rey.material.widget.CheckBox>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/forget"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17dp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_below="@id/buttonlogin2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>