<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".Signup">

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/creer"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/registerimageView"
        android:layout_width="305dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        app:srcCompat="@drawable/applogo" />

    <EditText
        android:id="@+id/registereditTextPhone"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="236dp"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/registereditTextName"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registereditTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerimageView" />

    <EditText
        android:id="@+id/registereditTextPassword"
        android:layout_width="354dp"
        android:layout_height="64dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>